add taskfile and fix some dev container issues
Signed-off-by: Joel Van Eenwyk <joel.vaneenwyk@gmail.com>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,14 +24,11 @@
         "ghcr.io/devcontainers-contrib/features/pre-commit:2": {},
         "ghcr.io/devcontainers-contrib/features/ruff:1": {},
         "ghcr.io/devcontainers-contrib/features/yamllint:2": {},
-        "ghcr.io/devcontainers-contrib/features/zig:1": {},
-        "ghcr.io/eitsupi/devcontainer-features/go-task:1": {},
-        "ghcr.io/oleksis/devcontainer-features/python-launcher:1": {}
-    }
-    // Features to add to the dev container. More info: https://containers.dev/features.
-    // "features": {},
+        "ghcr.io/devcontainers-contrib/features/zig:1": {}
+    },
     // Use 'forwardPorts' to make a list of ports inside the container available locally.
-    // "forwardPorts": [],
+    "forwardPorts": [8001, 8080]
+
     // Uncomment the next line if you want start specific services in your Docker Compose config.
     // "runServices": [],
     // Uncomment the next line if you want to keep your containers running after VS Code shuts down.
