--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,59 +1,53 @@
-[tool.poetry]
-name = "private-gpt"
+[project]
+name = "personal-gpt"
 version = "0.2.0"
 description = "Private GPT"
-authors = ["Zylon <hi@zylon.ai>"]
-
-[tool.poetry.dependencies]
-python = ">=3.11,<3.12"
-fastapi = { extras = ["all"], version = "^0.103.1" }
-boto3 = "^1.28.56"
-injector = "^0.21.0"
-pyyaml = "^6.0.1"
-python-multipart = "^0.0.6"
-pypdf = "^3.16.2"
-llama-index = { extras = ["local_models"], version = "0.9.3" }
-watchdog = "^3.0.0"
-qdrant-client = "^1.6.9"
-chromadb = { version = "^0.4.13", optional = true }
-asyncpg = { version = "^0.29.0", optional = true }
-pgvector = { version = "^0.2.5", optional = true }
-psycopg2-binary = { version = "^2.9.9", optional = true }
-sqlalchemy = { version = "^2.0.27", optional = true }
-
-[tool.poetry.group.dev.dependencies]
-black = "^22"
-mypy = "^1.2"
-pre-commit = "^2"
-pytest = "^7"
-pytest-cov = "^3"
-ruff = "^0"
-pytest-asyncio = "^0.21.1"
-types-pyyaml = "^6.0.12.12"
-
-# Dependencies for gradio UI
-[tool.poetry.group.ui]
-optional = true
-[tool.poetry.group.ui.dependencies]
-gradio = "^4.19.0"
-
-[tool.poetry.group.local]
-optional = true
-[tool.poetry.group.local.dependencies]
-llama-cpp-python = "^0.2.23"
-numpy = "1.26.0"
-sentence-transformers = "^2.2.2"
-# https://stackoverflow.com/questions/76327419/valueerror-libcublas-so-0-9-not-found-in-the-system-path
-torch = ">=2.0.0, !=2.0.1, !=2.1.0"
-transformers = "^4.34.0"
-
-[tool.poetry.extras]
-chroma = ["chromadb"]
-pgvector = ["sqlalchemy", "pgvector", "psycopg2-binary", "asyncpg"]
+authors = [
+    { name = "Zylon", email = "hi@zylon.ai" },
+    { name = "Joel Van Eenwyk", email = "joel.vaneenwyk@gmail.com" },
+]
+dependencies = [
+    "fastapi>=0.111.0",
+    "version>=0.1.1",
+    "boto3>=1.34.113",
+    "injector>=0.21.0",
+    "pyyaml>=6.0.1",
+    "python-multipart>=0.0.9",
+    "pypdf>=4.2.0",
+    "llama-index>=0.10.39",
+    "watchdog>=4.0.1",
+    "qdrant-client>=1.9.1",
+    "chromadb>=0.5.0",
+    "asyncpg>=0.29.0",
+    "pgvector>=0.2.5",
+    "psycopg2-binary>=2.9.9",
+    "sqlalchemy>=2.0.30",
+]
+readme = "README.md"
+requires-python = ">=3.11,<3.12"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.rye]
+managed = true
+dev-dependencies = [
+    "black>=24.4.2",
+    "mypy>=1.10.0",
+    "pre-commit>=3.7.1",
+    "pytest>=8.2.1",
+    "pytest-cov>=5.0.0",
+    "ruff>=0.4.5",
+    "pytest-asyncio>=0.23.7",
+    "types-pyyaml>=6.0.12.20240311",
+]
+
+[tool.hatch.metadata]
+allow-direct-references = true
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/personal_gpt"]
 
 # Packages configs
 
