--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,21 +7,25 @@ authors = [
     { name = "Joel Van Eenwyk", email = "joel.vaneenwyk@gmail.com" },
 ]
 dependencies = [
-    "fastapi>=0.111.0",
-    "version>=0.1.1",
-    "boto3>=1.34.113",
+    "fastapi[all]>=0.111.0",
+    "version",
+    "boto3",
     "injector>=0.21.0",
-    "pyyaml>=6.0.1",
-    "python-multipart>=0.0.9",
-    "pypdf>=4.2.0",
-    "llama-index>=0.10.39",
+    "pyyaml",
+    "python-multipart",
+    "pypdf",
+    "llama-index",
     "watchdog>=4.0.1",
-    "qdrant-client>=1.9.1",
-    "chromadb>=0.5.0",
-    "asyncpg>=0.29.0",
-    "pgvector>=0.2.5",
+    "qdrant-client",
+    "chromadb",
+    "asyncpg",
+    "pgvector",
     "psycopg2-binary>=2.9.9",
-    "sqlalchemy>=2.0.30",
+    "sqlalchemy",
+    "huggingface_hub>=0.23.1",
+    "pydantic>=2.7.1",
+    "transformers>=4.41.1",
+    "ruff>=0.4.5",
 ]
 readme = "README.md"
 requires-python = ">=3.11,<3.12"
