--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,22 @@ authors = [
 ]
 dependencies = [
     "fastapi[all]>=0.111.0",
+    "boto3>=1.34.114",
+    "injector>=0.21.0",
+    "pyyaml>=6.0.1",
+    "python-multipart>=0.0.9",
+    "pypdf>=4.2.0",
+    "llama-index>=0.10.39",
+    "watchdog>=4.0.1",
+    "qdrant-client>=1.9.1",
+    "chromadb>=0.5.0",
+    "asyncpg>=0.29.0",
+    "pgvector>=0.2.5",
+    "psycopg2-binary>=2.9.9",
+    "sqlalchemy>=2.0.30",
+    "huggingface-hub>=0.23.2",
+    "pydantic>=2.7.2",
+    "transformers>=4.41.1",
 ]
 readme = "README.md"
 requires-python = ">=3.11,<3.12"
