--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,16 @@ dependencies = [
     "pydantic>=2.7.2",
     "transformers>=4.41.1",
     "llama-index-llms-openai>=0.1.21",
+    "llama-index-embeddings-huggingface>=0.2.0",
+    "llama-index-embeddings-openai>=0.1.10",
+    "llama-index-embeddings-instructor>=0.1.3",
+    "llama-index-llms-llama-cpp>=0.1.3",
+    "llama-index-llms-openai-like>=0.1.3",
+    "llama-index-llms-replicate>=0.1.3",
+    "llama-index-core>=0.10.40",
+    "llama-index-experimental>=0.1.3",
+    "llama-index-bundle>=0.0.1",
+    "llama-index-legacy>=0.9.48",
 ]
 readme = "README.md"
 requires-python = ">=3.11,<3.12"
@@ -53,6 +63,7 @@ dev-dependencies = [
     "ruff>=0.4.6",
     "pytest-asyncio>=0.23.7",
     "types-pyyaml>=6.0.12.20240311",
+    "pylint>=3.2.2",
 ]
 # Packages configs
 
