--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "llama-index-experimental>=0.1.3",
     "llama-index-bundle>=0.0.1",
     "llama-index-legacy>=0.9.48",
+    "gradio>=4.31.5",
 ]
 readme = "README.md"
 requires-python = ">=3.11,<3.12"
